<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit"

    android:orientation="vertical">
    <!--    // 상단 고정-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_margin="5dp"
        android:background="@drawable/edit_round"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/first" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="202dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="left|center"
            android:text="혈관 탄성도 측정"
            android:textSize="20sp"
            android:fontFamily="@font/kalam_regular"
            android:textColor="@color/gray"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="240dp"
                android:layout_height="34dp"
                android:layout_margin="5dp"
                android:background="@drawable/edit"
                android:gravity="left|center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/exit"
                    android:layout_width="46dp"
                    android:layout_height="31dp"
                    android:layout_gravity="left|center"
                    android:layout_margin="20dp"
                    android:background="@drawable/rectangle1"
                    android:text="@string/x" />

                <TextView
                    android:id="@+id/state_eval"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/stop"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:fontFamily="@font/kalam_regular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="381dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:background="@drawable/edit"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/state_eval"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/kalam_regular"
                    android:text="@string/quan"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/state_eval"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/kalam_regular"
                    android:text="@string/quan1"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/state_eval"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/kalam_regular"
                    android:text="@string/quan2"
                    android:textColor="#000000"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/state_eval1"
                android:layout_width="481dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="@string/before"
                android:textColor="#000000"
                android:textSize="15sp"
                android:fontFamily="@font/kalam_regular" />

            <LinearLayout
                android:layout_width="401dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/edit"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/gray"
                    android:text="시작하기"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:fontFamily="@font/kalam_regular" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

