<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit"

    android:orientation="vertical">
    <!--    // 상단 고정-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="@drawable/edit_round"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="84dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/first" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="271dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="left|center"
            android:text="혈관 탄성도 설명 자료"
            android:textSize="20sp"
            android:fontFamily="@font/kalam_regular"
            android:textColor="@color/gray"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sensor"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/apg1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/edit"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/edit"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/mes1"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerInParent="true"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/link" />

                    <TextView
                        android:id="@+id/state"
                        android:layout_width="633dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/kalam_regular"
                        android:text="@string/apgs"
                        android:textColor="#000000"
                        android:textSize="13sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:background="@drawable/edit"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mes2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/mes" />

                <TextView
                    android:id="@+id/state1"
                    android:layout_width="540dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:text="@string/apgss"
                    android:textColor="#000000"
                    android:textSize="13sp"
                    android:fontFamily="@font/kalam_regular"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="401dp"
                android:layout_height="38dp"
                android:background="@drawable/edit"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Button"
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:background="@color/gray"
                    android:text="확인"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:fontFamily="@font/kalam_regular" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

