<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit"

    android:orientation="vertical">
    <!--    // 상단 고정-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="@drawable/edit_round"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="84dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/first" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="281dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="left|center"
            android:text="혈관 건강 나이 설명 자료"
            android:textSize="20sp"
            android:fontFamily="@font/kalam_regular"
            android:textColor="@color/gray"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="321dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="135dp"
                android:background="@drawable/edit"
                android:gravity="left|center"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/sensor"
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/sensor" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/edit"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/edit"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/mes"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerInParent="true"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/link" />

                    <TextView
                        android:id="@+id/st"
                        android:layout_width="622dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/ppg"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:fontFamily="@font/kalam_regular" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/edit"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mees"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/mes" />

                <TextView
                    android:id="@+id/st"
                    android:layout_width="454dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/kalam_regular"
                    android:text="@string/another"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/edit"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/st"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="[참고]S. J. Jung, A Study of Ubiquitous Healthcare Monitoring System using Wearable Pulse Oximeter, Dongseo University, M.S.Degree, 2009"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    android:fontFamily="@font/kalam_regular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="401dp"
                android:layout_height="39dp"
                android:background="@drawable/edit"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Button"
                    android:layout_width="100dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:background="@color/gray"
                    android:text="확인"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:fontFamily="@font/kalam_regular" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

